[package]

name = "keystroke"
version = "0.0.3"
authors = ["Alex Chandel <alexchandel@gmail.com>"]
description = "Send a string, character, or keystroke event to the system."
keywords = ["keyboard", "gui", "scripting"]
repository = "https://github.com/alexchandel/keystroke-rs"
readme = "README.md"
license = "Unlicense"

[dependencies]
winapi = "^0"
user32-sys = "^0"

