[package]

name = "keystroke"
version = "0.0.3"
authors = ["Alex Chandel <alexchandel@gmail.com>"]
description = "Send a string, character, or keystroke event to the system."
keywords = ["keyboard", "gui", "scripting"]
repository = "https://github.com/alexchandel/keystroke-rs"
readme = "README.md"
license = "Unlicense"

[target.'cfg(windows)'.dependencies]
winapi = "^0"
user32-sys = "^0"

[target.'cfg(target_os="linux")'.dependencies]
libxdo = "0.4.1"
itertools = "0.5.6"
